--- a/_projects/00-2014-09-24-project-3.md
+++ b/_projects/00-2014-09-24-project-3.md
@@ -11,7 +11,7 @@ permalink: "project-3.html"
 \end{equation}
 
 ## Overview
-Lorem ipsum $$a^2 + b^2 = c^2$$ dolor sit amet, tota primis copiosae id quo. Melius eligendi elaboraret pri et, eam menandri platonem te. Tollit iudicabit gloriatur per ad. Ad diceret recteque eum, eu commodo petentium qui. No aliquid delectus eam, dicta eripuit convenire te nec. Vix no veritus dignissim. Erat ferri veniam ut eos, pro ex eius error intellegat, his te graecis oporteat honestatis.
+Testing how to make changes and push them.
 
 ### Topic 1
 His nemore audiam consequat ad, no augue choro assueverit mei. Zril offendit tincidunt ne quo. At commodo integre alienum sea, cu vocent fuisset suscipit nam. Eum ex tation omnesque adversarium, mutat autem putant te nam. Id vix facilis complectitur, vis vitae vivendo euripidis ea, fugit eirmod an vix.
