changed text in topics 1,2,3,4 descriptions

--- a/_projects/00-2014-09-24-project-3.md
+++ b/_projects/00-2014-09-24-project-3.md
@@ -14,13 +14,13 @@ permalink: "project-3.html"
 Testing how to make changes and push them.
 
 ### Topic 1
-Enter topic 1 description here.
+Topic 1 - Enter topic 1 description here.
 
 ### Topic 2
-Enter topic 2 description here.
+Topic 2 - Enter topic 2 description here.
 
 ### Topic 3
-Enter topic 3 description here.
+Topic 3 - Enter topic 3 description here.
 
 ### Topic 4
-Enter topic 4 description here.
+Topic 4 - Enter topic 4 description here.
